archive/apps/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: default
spec:
  selector:
    app: unifi
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: https
  - protocol: UDP
    port: 3478
    targetPort: 3478
    name: something
  - protocol: UDP
    port: 10001
    targetPort: 10001
    name: something2
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: discovery
  - protocol: UDP
    port: 1900
    targetPort: 1900
    name: another
  type: LoadBalancer
