archive/apps/unifi/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.joejad.com`)
      kind: Rule
      services:
        - name: unifi
          port: 8443
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
